--- a/WebContent/WEB-INF/conf/log4j.properties
+++ b/WebContent/WEB-INF/conf/log4j.properties
@@ -1,4 +1,17 @@
-log4j.rootLogger=debug,console
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %5p %c\:(%F\:%L) - %m%n
+log4j.rootLogger=info,CONSOLE,LOGFILE
+log4j.addivity.org.apache=true
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Encoding=UTF8
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] Tomcat7 %X{pid}   %c %F:%L "%m"%n
+
+log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.LOGFILE.File=/var/logs/simple.log
+log4j.appender.LOGFILE.MaxFileSize=1MB
+log4j.appender.LOGFILE.MaxBackupIndex=10 
+log4j.appender.LOGFILE.DatePattern='.'yyyy-MM-dd
+log4j.appender.LOGFILE.Append=true
+log4j.appender.LOGFILE.Threshold=info 
+log4j.appender.LOGFILE.Encoding=UTF8
+log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] Tomcat7 %X{pid}   %c %F:%L "%m"%n
