--- a/WebContent/WEB-INF/conf/project.properties
+++ b/WebContent/WEB-INF/conf/project.properties
@@ -1,5 +1,6 @@
-dbusername=root
+dbusername=lulonglong
 dbpassword=880923aa
-dbconnection=jdbc:mysql://localhost:3306/simpledb
+dbconnection=jdbc:mysql://rdseyvijmeyvijm.mysql.rds.aliyuncs.com:3306/simpledb
+#dbconnection=jdbc:mysql://localhost:3306/simpledb
 moveSingleMaxCount=100
 breakpassword=880923
