--- a/WebContent/WEB-INF/conf/log4j.properties
+++ b/WebContent/WEB-INF/conf/log4j.properties
@@ -3,7 +3,7 @@ log4j.addivity.org.apache=true
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Encoding=UTF8
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] Tomcat7 %X{pid}   %c %F:%L "%m"%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p]  %c %F:%L "%m"%n
 
 log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.LOGFILE.File=/var/logs/simple.log
@@ -14,4 +14,4 @@ log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.Threshold=info 
 log4j.appender.LOGFILE.Encoding=UTF8
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] Tomcat7 %X{pid}   %c %F:%L "%m"%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p]  %c %F:%L "%m"%n
