change log prop

--- a/WebContent/WEB-INF/conf/log4j.properties
+++ b/WebContent/WEB-INF/conf/log4j.properties
@@ -7,11 +7,9 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p]  %c
 
 log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.LOGFILE.File=/var/logs/simple.log
-log4j.appender.LOGFILE.MaxFileSize=1MB
-log4j.appender.LOGFILE.MaxBackupIndex=10 
 log4j.appender.LOGFILE.DatePattern='.'yyyy-MM-dd
 log4j.appender.LOGFILE.Append=true
-log4j.appender.LOGFILE.Threshold=info 
+log4j.appender.LOGFILE.Threshold=INFO 
 log4j.appender.LOGFILE.Encoding=UTF8
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p]  %c %F:%L "%m"%n
